--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Este é um teste</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolorem placeat quos vitae minus soluta. Ab cumque natus quos magni sint porro tenetur quibusdam reprehenderit iure! Molestias officiis cumque quae?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolorem placeat quos vitae minus soluta. Ab cumque natus quos magni sint porro tenetur quibusdam reprehenderit iure! Molestias officiis cumque quae?</p>
-    
+    <img src="img/image_0(24).jpg" alt="casa">
+    <img src="img/image_0(06).jpg" alt="sala">
 </body>
 </html>
